Current player designation

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,8 @@ extends layout
 block content
   h1 Definitely Not Flink
   h2: span#playerName &nbsp;
+  h3 <span id="currentPlayer">Someone</span> is rolling...
+
   .pure-g
     #d0.d.pure-u-1-5
     #d1.d.pure-u-1-5
