Declaration of winner

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
   form.pure-form(onsubmit="event.preventDefault();")
     input(type="text")#playerName.pure-input-1-5
     button#setName.pure-button Edit
-  h3 <span id="currentPlayer">Someone</span> is rolling...
+  h3 <span id="turnState">Someone is rolling...</span>
 
   .pure-g.centered
     #d0.d.pure-u-1-5
