--- a/views/index.pug
+++ b/views/index.pug
@@ -27,8 +27,8 @@ block content
         tr: th 4s
         tr: th 5s
         tr: th 6s
-        tr: th Subtotal
-        tr: th Bonus
+        tr.sub1: th Subtotal
+        tr.bonus: th Bonus
         tr: th 3K
         tr: th 4K
         tr: th FH
@@ -37,8 +37,8 @@ block content
         tr: th 5K
         tr: th Bonus 5K
         tr: th Chance
-        tr: th Subtotal
-        tr: th Total
+        tr.sub2: th Subtotal
+        tr.total: th Total
 
   section.centered
     button.pure-button.pure-button-primary#verify Verify State
