--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,9 @@
-/*
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
-*/
 .d {
   border-radius: 6px;
   height: 96px;
   width: 96px;
   background-size: cover;
   background-image: url(../images/d0.svg);
-  background-color: #95D8EB;
   background-color: #0076BE;
   margin: 16px;
 }
@@ -33,7 +22,6 @@ button.smaller { font-size: 80%; }
 .centered { width: 100%; align-content: center; text-align: center; margin: 32px; max-width: 640px; }
 
 td { text-align: center; }
-tr.sub1 { border-top: 1px solid black; }
+tr.sub1, tr.sub2 { border-top: 1px solid black; }
 tr.bonus { border-bottom: 2px solid black; }
-tr.sub2 { border-top: 1px solid black; }
 tr.total { border-top: 3px double black; }
